--- a/src/styles.css
+++ b/src/styles.css
@@ -39,6 +39,19 @@
     --breakpoint-xs: 30rem;
     --breakpoint-2xl: 100rem;
     --breakpoint-3xl: 120rem;
+
+    --width-content: 87.5rem;
+
+    --animate-shimmer: shimmer 1.5s infinite;
+}
+
+@keyframes shimmer {
+    0% {
+        background-position: -400px 0;
+    }
+    100% {
+        background-position: 400px 0;
+    }
 }
 
 @layer base {
